--- a/DOTPAINTING/webkaizen.html
+++ b/DOTPAINTING/webkaizen.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pencil Sketch</title>
+  <title>Pencil Sketch | @mikey_reddy</title>
   <style>
     *{
       margin:0;
@@ -104,3 +104,4 @@
   </script>
 </body>
 </html>
+
