--- a/DOTPAINTING/webkaizen.html
+++ b/DOTPAINTING/webkaizen.html
@@ -44,7 +44,7 @@
     let brushSize = 2;      // pencil stroke size
 
     function preload() {
-      img = loadImage("goku.jpg"); // your image file
+      img = loadImage("https://i.pinimg.com/1200x/31/18/e5/3118e5a1f64ac9606826e87690b70d28.jpg"); // your image file
     }
 
     function setup() {
@@ -104,4 +104,5 @@
   </script>
 </body>
 </html>
+
 
