--- a/Interactive 3D Galaxy Animation/index.html
+++ b/Interactive 3D Galaxy Animation/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-  
 
   <head>
     <meta charset="UTF-8">
-    <title>Interactive 3D Galaxy Animation | @coding.stella</title>
+    <title>Interactive 3D Galaxy Animation | @mikey_reddy</title>
     <link rel="stylesheet" href="./style.css">
   </head>
     
