--- a/love-lyrics-project-main/index.html
+++ b/love-lyrics-project-main/index.html
@@ -3,7 +3,7 @@
 <head> 
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <title>LOVE LYRICS | mikeyreddy</title> 
+    <title>FRIENDSHIP LYRICS | mikeyreddy</title> 
     <meta name="description" content="A romantic audio player with typewriter lyrics and photo gallery."> 
     <link rel="stylesheet" href="style.css"> 
 </head> 
@@ -122,4 +122,5 @@
     
     <script src="script.js"></script> 
 </body>
+
 </html>
