--- a/MINI GTA/index.html
+++ b/MINI GTA/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1, user-scalable=no">
-  <title>Mini GTA | webkaizen</title>
+  <title>Mini GTA | mikeyreddy</title>
 
   <link rel="shortcut icon" href="icon.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/abisdbest/classroom.google.com@85146ac051b67a3c32ebdf898bb0144d818d580b/drive.google.com/escape%20road/TemplateData/style.css">
